:bug:  No, really, this time I fixed the clipping

--- a/components/Quote.module.css
+++ b/components/Quote.module.css
@@ -16,9 +16,8 @@
 }
 
 .quote__refreshbutton > svg {
-    width: 24px;
-    height: 24px;
-
+    height: 16px;
+    padding-right: 5px;
 }
 
 .quote__refreshbutton:hover > svg {
